Last minute changes -- added AES encryption and decryption

--- a/notebook/Basics_of_cryptography--Deploy_secure_storage_container.ipynb
+++ b/notebook/Basics_of_cryptography--Deploy_secure_storage_container.ipynb
@@ -203,6 +203,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Encryption and decryption -- Using AES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Crypto.Cipher import AES\n",
+    "from Crypto.Random import get_random_bytes\n",
+    "\n",
+    "key = get_random_bytes(16)\n",
+    "cipher = AES.new(key, AES.MODE_EAX)\n",
+    "ciphertext, tag = cipher.encrypt_and_digest('Some random string'.encode('utf-8'))\n",
+    "\n",
+    "cipher_nonce = cipher.nonce\n",
+    "\n",
+    "\n",
+    "print (cipher.nonce)\n",
+    "print (ciphertext)\n",
+    "print (tag)\n",
+    "\n",
+    "encrypted_data = {'nonce': cipher.nonce, 'cipher_text': ciphertext, 'data_tag': tag}\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "np.savez('./encrypted_data.npz', **encrypted_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encrypted_data = dict(np.load('./encrypted_data.npz'))\n",
+    "\n",
+    "print (encrypted_data)\n",
+    "\n",
+    "cipher_nonce = (encrypted_data['nonce']).tobytes()\n",
+    "cipher_text = (encrypted_data[\"cipher_text\"]).tobytes()\n",
+    "data_tag = (encrypted_data[\"data_tag\"]).tobytes()\n",
+    "\n",
+    "print (cipher_nonce)\n",
+    "\n",
+    "cipher = AES.new(key, AES.MODE_EAX, cipher_nonce)\n",
+    "data = cipher.decrypt_and_verify(cipher_text, data_tag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print (data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating and managing an encrypted storage container"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -254,13 +324,6 @@
     "    else:\n",
     "        print ('The argument command takes a list input ...')\n",
     "    return {'Output': output, 'Error': error }"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Create an encrypted storage container"
    ]
   },
   {
